Update index.html with enhanced Open Graph description, comment out unused meta tags, and add Google Analytics tracking script. Update favicon.ico.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
     <meta name="author" content="Lovable" />
 
     <meta property="og:title" content="royal-elite-invitation" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Access the private membership that lets you enjoy luxury cruises for a fraction of the real price." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MSMM3HLD2N"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MSMM3HLD2N');
+</script>
   </head>
 
   <body>
